--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/grilled_shrimp_scampi.html">Grilled Shrimp Scampi</a></li>
+            <li><a href="recipes/chicken_pot_pie.html">Chicken Pot Pie</a></li>
+            <li><a href="recipes/mac_n_cheese.html">Mac n Cheese</a></li>
+        </ul>
     </body>
 </html>
