Modify the appearance of the site
Added a css file and adjusted the font and colors

--- a/recipes/grilled_shrimp_scampi.html
+++ b/recipes/grilled_shrimp_scampi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grilled Shrimp Scampi</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Grilled Shrimp Scampi</h1>
@@ -21,7 +22,7 @@
         <li>¼ teaspoon crushed red pepper flakes to taste</li>
         <li>1 ½ pounds medium shrimp, peeled and deveined</li>
     </ul>
-    <h2>Steps:</h2>
+    <h2>Directions:</h2>
     <ol>
         <li>In a large, non-reactive bowl, stir together the olive oil, lemon juice, parsley, garlic, and black pepper. Season with crushed red pepper, if desired. Add shrimp, and toss to coat. Marinate in the refrigerator for 30 minutes.</li>
         <li>Preheat grill for high heat. Thread shrimp onto skewers, piercing once near the tail and once near the head. Discard any remaining marinade.</li>
