--- a/recipes/chicken_pot_pie.html
+++ b/recipes/chicken_pot_pie.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Pot Pie</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Chicken Pot Pie</h1>
@@ -27,7 +28,7 @@
         <li>⅔ cup milk</li>
         <li>2 (9 inch) unbaked pie crusts</li>
     </ul>
-    <h2>Steps:</h2>
+    <h2>Directions:</h2>
     <ol>
         <li>Gather all ingredients and preheat the oven to 425 degrees F (220 degrees C.)</li>
         <li>Combine chicken, carrots, peas, and celery in a saucepan; add water to cover and bring to a boil. Boil for 15 minutes, then remove from the heat and drain.</li>
